--- a/lesson16.html
+++ b/lesson16.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ducimus nam, odio nisi enim aperiam aliquid esse possimus quae non ipsa est, similique at tempore magnam iure! Rem, ipsum enim.</p>
 </body>
 </html>
